# synthetic_data

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.pytest_tmp/: test_iter_record_payloads_readcurrent  test_run_audio_pipeline_full_ocurrent  test_run_audio_pipeline_writescurrent  test_stitch_turn_audio_ignorescurrent
artifacts/audio/: audio_generation_summary.json
artifacts/audio/consult_000000/: audio_manifest.json  transcript_reference.json
artifacts/audio/consult_000001/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000002/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000003/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000004/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000005/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000006/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000007/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000008/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000009/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000010/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000011/: audio_manifest.json  transcript_reference.json  tts_script.json
artifacts/audio/consult_000012/: audio_manifest.json  transcript_reference.json  (+1 more)
configs/: tts.yaml
data/processed/: train.jsonl
scripts/: export_to_hf.py  generate_dataset.py  synthesize_audio.py
src/cli/: generate_audio_dataset.py
tests/: test_export.py  test_generate_audio_dataset.py
(+143 files in other folders)
